2005-06-11  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay/UK.pm (preprocess_results_page): new method
	(_title_td_specs): new specs
	(_result_count_td_specs): new specs

	* lib/WWW/Search/Ebay/Stores.pm (preprocess_results_page): new method

2005-06-10  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay.pm (parse_tree): added a hack to detect when a Stores search runs off the bottom of the list

2005-05-18  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay.pm (_result_count_td_specs): new method
	(_title_td_specs): new method
	(parse_tree): fixed parser for new webpage contents

	* lib/WWW/Search/Ebay/UK.pm (_result_count_td_specs): new method
	(_title_td_specs): new method

2005-02-28  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay/UK.pm (currency_pattern): clean up pattern

2005-01-25  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay.pm (parse_tree): call _create_description as a method

2005-01-23  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay.pm (_format_date): now a method, not just a function
	(_create_description): now a method, not just a function
	(_cleanup_url): new method

2004-11-29  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay/UK.pm: new file

	* t/uk.t: new file

	* lib/WWW/Search/Ebay.pm (native_setup_search): fix column order parsing for Ebay::UK

2004-11-27  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay.pm (_format_date): new function
	(_create_description): new function
	(parse_tree): detect redirection to single-auction page

2004-11-24  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay.pm (parse_tree): fetch eBay official time, and fix timezone conversion

2004-11-23  Kingpin  <mthurn@verizon.net>

	* lib/WWW/Search/Ebay.pm (parse_tree): omit seconds from change_date value;
	do not set TZ if it's already in the environment

2004-11-05  Kingpin  <mthurn@verizon.net>

	* t/motors.t: fix 1-page query

2004-10-25  Kingpin  <mthurn@verizon.net>
