@@ -1,3 +1,13 @@
+2005-07-30    <Daddy@C-3PO>
+
+	* lib/WWW/Search/Ebay/UK.pm (_result_count_td_specs_OLD): use parent class' value for this method
+
+	* lib/WWW/Search/Ebay.pm (preprocess_results_page): fix title pattern
+
+2005-07-29    <Daddy@C-3PO>
+
+	* lib/WWW/Search/Ebay.pm (parse_tree): two fixes for new eBay page format
+
 2005-06-11  Kingpin  <mthurn@verizon.net>
 
 	* lib/WWW/Search/Ebay/UK.pm (preprocess_results_page): new method
